src/test/deca/context/valid/sansObj/assign-compatible-int-int.deca
// Description:
//    Affectation de deux int entre eux
//
// Résultat:
//    Succès
//
{
   int a;
   int b;

   // Doit etre accepté.
   a = b;
}