src/test/deca/context/invalid/sansObj/add-var-non-def.deca
// Description:
//    Addition entre un int et une variable non définie
//
// Résultat:
//variable non definie
// 

{
   int a;
   a = a + b;
}